docs: sync updates across 2 topics
Updated: README.md, gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ temp/
 # Sync state (optional - you may want to commit this)
 # Uncommenting this will make every sync a full sync
 # .notion-sync/state.json
+.github/workflows/sync.yml
