fix: use GitHub vars for non-secrets, make GITHUB_TOKEN optional
- sync.yml: Use vars.NOTION_PARENT_PAGE_ID instead of secrets
- sync.yml: Use vars.GIT_USER_NAME and vars.GIT_USER_EMAIL
- sync.yml: Configure git identity from environment variables
- config.py: Make GITHUB_TOKEN optional (not needed for --no-push)
- .env.example: Update documentation for optional GITHUB_TOKEN
- Update workflow documentation comments

--- a/.env.example
+++ b/.env.example
@@ -16,12 +16,13 @@ NOTION_TOKEN=ntn_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 NOTION_PARENT_PAGE_ID=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # =============================================================================
-# GITHUB CONFIGURATION (Required for push)
+# GITHUB CONFIGURATION (Optional - only for local push)
 # =============================================================================
 
-# GitHub Personal Access Token
+# GitHub Personal Access Token (optional)
+# Only needed for local push - CI uses automatic GITHUB_TOKEN
 # Create at: https://github.com/settings/tokens
-# Required scopes: repo
+# Required scopes: repo, workflow
 GITHUB_TOKEN=github_pat_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # =============================================================================
